# quantum-security-auditor

./: .gitignore  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
data/: bank_vault.json
src/: algorithm_benchmark.ipynb  algorithm_benchmark.py  generate_vault_data.py  main.py  pqc_defense.py  quantum_auditor.py  quantum_comparison.ipynb  score_payment_tx_ui.ipynb  score_payment_tx_ui.py
src/algorithms/: __init__.py  crypto_algorithms.py  pqc_defense.py  quantum_auditor.py
src/benchmarks/: __init__.py  algorithm_benchmark.py
src/cli/: __init__.py  auditor_cli.py
src/data_tools/: __init__.py  generate_vault_data.py
src/ui/: payment_security_web_app.py
